# rust-repo-template

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TEMPLATE.md
docs/: AGENT-INIT-GUIDE.md
scripts/: init.ps1
src/: main.rs
