[package]
# TODO: rename to your crate's name (kebab-case, e.g. `my-tool`).
name = "app"
version = "0.1.0"
edition = "2024"
# TODO: fill these in for your project.
description = "TODO: one-line description of this crate"
license = "MIT"
repository = "https://github.com/OWNER/REPO"
readme = "README.md"
# Pin a Minimum Supported Rust Version if your project needs one, e.g.
# rust-version = "1.85"  # edition 2024 requires Rust >= 1.85

# ---------------------------------------------------------------------------
# Dependencies
#
# Convention (see AGENTS.md "Dependency management"): this template fixes NO
# allow-list of crates. Add whatever your project needs — but give every new
# dependency an inline comment explaining *why* it's here and what it's used
# for, so the next reader (human or agent) doesn't have to guess. Pin major
# versions, prefer well-maintained crates, and keep Cargo.lock committed.
#
# Example:
#   serde = { version = "1", features = ["derive"] }  # (de)serialize config
# ---------------------------------------------------------------------------
[dependencies]

[dev-dependencies]

# Platform-specific dependencies go under a cfg target table, e.g.:
# [target.'cfg(windows)'.dependencies]
# winapi-util = "0.1"  # <why this Windows-only dependency is needed>
