[package]
# Token-templated — `scripts/init.ps1` substitutes the `__…__` placeholders.
# See TEMPLATE.md (token table) and docs/AGENT-INIT-GUIDE.md.
name = "__CrateName__"
version = "0.1.0"
edition = "2024"
description = "__Description__"
license = "MIT"
repository = "https://github.com/__GitHubOwner__/__CrateName__"
readme = "README.md"
# Pin a Minimum Supported Rust Version if your project needs one, e.g.
# rust-version = "1.85"  # edition 2024 requires Rust >= 1.85

# ---------------------------------------------------------------------------
# Dependencies
#
# Convention (see AGENTS.md "Dependency management"): this template fixes NO
# allow-list of crates. Add whatever your project needs — but give every new
# dependency an inline comment explaining *why* it's here and what it's used
# for, so the next reader (human or agent) doesn't have to guess. Pin major
# versions, prefer well-maintained crates, and keep Cargo.lock committed.
#
# Example:
#   serde = { version = "1", features = ["derive"] }  # (de)serialize config
# ---------------------------------------------------------------------------
[dependencies]

[dev-dependencies]

# Platform-specific dependencies go under a cfg target table, e.g.:
# [target.'cfg(windows)'.dependencies]
# winapi-util = "0.1"  # <why this Windows-only dependency is needed>
